--- a/blocks/buttons/closeButton/closeButton.css
+++ b/blocks/buttons/closeButton/closeButton.css
@@ -7,6 +7,8 @@
   background-image: url(../../../pictures/Close\ Icon.png);
   background-color: #000;
   background-size: 32px 32px;
+  background-repeat: no-repeat;
+  background-position: center;
   box-sizing: border-box;
   border: none;
   box-shadow: none;
