--- a/blocks/add-button/add-button.css
+++ b/blocks/add-button/add-button.css
@@ -1,4 +1,4 @@
-.addButton {
+.add-button {
   width: 150px;
   height: 50px;
   box-sizing: border-box;
@@ -7,13 +7,18 @@
   background: none;
   box-shadow: none;
 }
-.addButton:hover {
+.add-button:hover {
   opacity: 0.6;
   cursor: pointer;
 }
 @media screen and (max-width: 650px) {
-  .addButton {
+  .add-button {
     width: 282px;
-    margin-top: 15px;
+    margin-top: 28px;
+    padding: 0;
+    grid-column: 1/2;
+    grid-row: 3;
+    justify-self: baseline;
+    align-self: baseline;
   }
 }
