--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,7 @@
 .page {
   margin: 0 auto;
   padding: 0;
-  max-width: 1280px;
+  min-width: 320px;
   box-sizing: border-box;
   background-color: #000000;
   font-family: 'Inter', Arial, sans-serif;
