--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,11 +1,21 @@
 .profile {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 150px 312px 268px 150px;
+  grid-template-rows: 1fr;
   align-items: center;
-  justify-content: space-between;
+  justify-items: start;
+}
+@media screen and (max-width: 980px) {
+  .profile {
+  grid-template-columns: 130px 230px 70px 150px;
+  }
 }
 @media screen and (max-width: 650px) {
   .profile {
-    flex-direction: column;
+    max-width: 282px;
+    margin: 0 auto;
+    grid-template-columns: 245px 40px;
+    grid-template-rows: 115px 90px 40px;
+    justify-items: center;
   }  
 }
