--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -5,12 +5,12 @@
 @media screen and (max-width: 980px) {
   .content {
     max-width: 580px;
-    margin: 50px auto 0;
+    margin-top: 50px;
   }
 }
 @media screen and (max-width: 650px) {
   .content {
     max-width: 320px;
-    margin: 45px auto 0;
+    margin-top: 45px;
   }
 } 
