--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,7 +1,8 @@
 .element__image {
   max-width: 282px;
+  width: 100%;
   max-height: 282px;
-  object-fit: contain;
+  height: 100%;
+  object-fit: cover;
   border-radius: 10px 10px 0px 0px;
-  background: #C4C4C4;
 }
