--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,10 +1,12 @@
 .header__logo {
-  max-width: 142px;
-  margin-bottom: 41px;
+  width: 142px;
+  height: 34px;
+  margin-bottom: 35px;
 }
 @media screen and (max-width: 650px) {
   .header__logo {
-    max-width: 104px;
-    margin: 0 auto 23px 27px;
+    width: 104px;
+    height: 25px;
+    margin: 0 auto 26px 27px;
   } 
 } 
