--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   padding-top: 45px;
   align-content: center;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 @media screen and (max-width: 980px) {
   .header {
