--- a/blocks/like-button/like-button.css
+++ b/blocks/like-button/like-button.css
@@ -1,15 +1,16 @@
-.likeButton {
+.like-button {
   padding-left: 0;
   padding-right: 20px;
   grid-column: 2;
   grid-row: 2;
-  background: none;
+  background-color: #fff;
+  background-image: url(../../pictures/likeButton.svg);
   border: none;
   box-shadow: none;
   width: 22px;
   height: 19px;
 }
-.likeButton:hover {
+.like-button:hover {
   opacity: 0.5;
   cursor: pointer;
 }
