--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,24 +1,23 @@
 .popup__container {
   margin-top: 195px;
-  max-width: 430px;
-  min-height: 330px;
+  max-width: 358px;
+  min-height: 259px;
   background: #FFFFFF;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  align-self: center;
   position: fixed;
   top: 0;
   left: calc((100% - 430px)/2);
+  padding: 0 36px;
 }
 @media screen and (max-width: 650px) {
   .popup__container {
-    max-width: 282px;
-    min-height: 322px;
+    max-width: 238px;
+    min-height: 272px;
     left: calc((100% - 282px)/2);
     margin-top: 123px;
+    padding: 0 22px;
   }  
 }
