--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,18 +1,16 @@
 .popup__title {
-  font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
   color: #000000;
-  margin: 0 auto 0 36px;
-  padding-top: 34px;
+  margin: 0;
+  margin-top: 2px;
 }
 @media screen and (max-width: 650px) {
   .popup__title {
     font-size: 18px;
     line-height: 22px;
-    padding-top: 25px;
-    margin-left: 22px;
+    margin-top: 5px;
   }
 }
