--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,11 +1,15 @@
 .profile__avatar {
-  max-width: 120px;
-  max-height: 120px;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
-  margin-right: 30px;
 }
 @media screen and (max-width: 650px) {
   .profile__avatar {
-    margin-right: 0;
-  } 
+    grid-column: 1/2;
+    grid-row: 1;
+    justify-self: center;
+    position: relative;
+    top: 0px;
+    left: 20px;
+  }
 }
