--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -1,13 +1,21 @@
 .profile__subtitle {
-  font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
   margin: 5px 0 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 980px) {
   .profile__subtitle {
+    max-width: 230px;
+  }
+}
+@media screen and (max-width: 650px) {
+  .profile__subtitle {
+    max-width: 190px;
     font-size: 14px;
     line-height: 17px;
     text-align: center;
