--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,25 +1,25 @@
 .profile__title {
-  margin-top: 24px;
-  margin-bottom: 0;
-  font-family: 'Inter', Arial, sans-serif;
+  margin: 0;
+  max-width: 312px;
   font-style: normal;
   font-weight: 500;
   font-size: 42px;
   line-height: 114%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 @media screen and (max-width: 980px) {
   .profile__title {
+    max-width: 230px;
     font-size: 32px;
     line-height: 40px;
   }
 }
 @media screen and (max-width: 650px) {
   .profile__title {
+    max-width: 190px;
     margin-top: 0;
-  }
-}
-@media screen and (max-width: 450px) {
-  .profile__title {
     font-size: 27px;
     line-height: 33px;
     text-align: center;
