--- a/pages/index.css
+++ b/pages/index.css
@@ -3,7 +3,6 @@
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
-@import url(../blocks/header/__line/header__line.css);
 @import url(../blocks/content/content.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__title/profile__title.css);
@@ -18,18 +17,21 @@
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
-@import url(../blocks/buttons/addButton/addButton.css);
-@import url(../blocks/buttons/editButton/editButton.css);
-@import url(../blocks/buttons/likeButton/likeButton.css);
+@import url(../blocks/add-button/add-button.css);
+@import url(../blocks/edit-button/edit-button.css);
+@import url(../blocks/like-button/like-button.css);
+@import url(../blocks/like-button/_active/like-button_active.css);
+@import url(../blocks/close-button/close-button.css);
+@import url(../blocks/submit-button/submit-button.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/__container/popup__container.css);
-@import url(../blocks/popup/__work/popup__work.css);
-@import url(../blocks/popup/__name/popup__name.css);
-@import url(../blocks/popup/__info/popup__info.css);
-@import url(../blocks/popup/__about/popup__about.css);
 @import url(../blocks/popup/__title/popup__title.css);
-@import url(../blocks/buttons/submitButton/submitButton.css);
 @import url(../blocks/popup/__button/popup__button.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
-@import url(../blocks/buttons/closeButton/closeButton.css);
-@import url(../blocks/buttons/likeButton/_active/likeButton_active.css);
+@import url(../blocks/popup/_closed/popup_closed.css);
+@import url(../blocks/form/form.css);
+@import url(../blocks/form/__info/form__info.css);
+@import url(../blocks/form/__name/form__name.css);
+@import url(../blocks/form/__input/form__input.css);
+@import url(../blocks/form/__handler/form__handler.css);
+@import url(../blocks/form/__about/form__about.css);
