--- a/blocks/close-button/close-button.css
+++ b/blocks/close-button/close-button.css
@@ -4,7 +4,7 @@
   position: relative;
   top: -40px;
   right: calc((100% - 430px) / 2 - 366px);
-  background-image: url(../../pictures/closeButton.svg);
+  background-image: url(../../images/closeButton.svg);
   background-color: #000;
   background-size: 32px 32px;
   background-repeat: no-repeat;
