--- a/blocks/like-button/_active/like-button_active.css
+++ b/blocks/like-button/_active/like-button_active.css
@@ -1,4 +1,4 @@
 .like-button_active {
-  background-image: url(../../../../pictures/likeActive.svg);
+  background-image: url(../../../../images/likeActive.svg);
   opacity: 1;
 }
