--- a/blocks/like-button/like-button.css
+++ b/blocks/like-button/like-button.css
@@ -4,7 +4,7 @@
   grid-column: 2;
   grid-row: 2;
   background-color: #fff;
-  background-image: url(../../pictures/likeButton.svg);
+  background-image: url(../../images/likeButton.svg);
   border: none;
   box-shadow: none;
   width: 22px;
