--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -4,9 +4,10 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  align-content: center;
   background-color: rgba(0, 0, 0, 0.5);
   background-size: cover;
   display: none;
   justify-content: center;
+  align-items: center;
+  align-content: center;
 }
