--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -5,3 +5,9 @@
   display: flex;
   flex-direction: column;
  }
+ @media screen and (max-width: 650px) {
+  .element {
+    margin: 0 auto;
+  }
+  
+ }
