--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -4,6 +4,8 @@
   border-radius: 10px;
   display: flex;
   flex-direction: column;
+  z-index: 1;
+  position: relative;
  }
  @media screen and (max-width: 650px) {
   .element {
