--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,8 +1,6 @@
 .element__image {
-  max-width: 282px;
-  width: 100%;
-  max-height: 282px;
-  height: 100%;
+  width: 282px;
+  height: 282px;
   object-fit: cover;
   border-radius: 10px 10px 0px 0px;
 }
