--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -5,6 +5,7 @@
   grid-template-rows: repeat(2, 361px);
   gap: 20px 17px;
   max-width: 100%;
+  justify-content: center;
 }
 @media screen and (max-width: 980px) {
   .elements {
