--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -10,4 +10,7 @@
   justify-content: center;
   align-items: center;
   align-content: center;
+  visibility: hidden;
+  opacity: 0;
+  /*transition: visibility 0.5s linear, opacity 0.5s linear;*/
 }
