--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -6,11 +6,13 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   background-size: cover;
-  display: none;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  align-content: center;
+  text-align: left;
+  transition: visibility 0.5s, opacity 0.5s ease-in;
   visibility: hidden;
   opacity: 0;
-  /*transition: visibility 0.5s linear, opacity 0.5s linear;*/
+  z-index: 4;
 }
