--- a/blocks/popup/__text/popup__text.css
+++ b/blocks/popup/__text/popup__text.css
@@ -1,7 +1,7 @@
 .popup__text {
   position: relative;
   top: 10px;
-  left: 38px;
+  left: 0;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
