edited review comments

--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,5 +1,5 @@
 .element {
-  max-width: 282px;
+  width: 282px;
   background-color: #FFFFFF;
   border-radius: 10px;
   display: flex;
@@ -11,5 +11,4 @@
   .element {
     margin: 0 auto;
   }
-  
  }
