--- a/blocks/close-button/_type/_image/close-button_type_image.css
+++ b/blocks/close-button/_type/_image/close-button_type_image.css
@@ -1,10 +1,10 @@
-.close-button_image {
+.close-button_type_image {
   width: 32px;
   height: 32px;
   position: relative;
   top: -10px;
   left: 101%;
-  background-image: url(../../images/closeButton.svg);
+  background-image: url(../../../../images/closeButton.svg);
   background-color: transparent;
   background-size: 32px 32px;
   background-repeat: no-repeat;
