--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -1,9 +1,14 @@
 .form__input {
   width: 358px;
   border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  border-bottom: 1px solid rgba(196, 196, 196, 1);
+  color: rgba(196, 196, 196, 1);
   margin: 0 auto;
   padding: 0 0 8px;
+}
+.form__input:valid {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  color: #000000;
 }
 @media screen and (max-width: 650px) {
   .form__input {
