--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -3,8 +3,9 @@
   border: none;
   border-bottom: 1px solid rgba(196, 196, 196, 1);
   color: rgba(196, 196, 196, 1);
-  margin: 0 auto;
-  padding: 0 0 8px;
+  margin: 0 auto 17px;
+  padding: 0 0 13px;
+  outline: none;
 }
 .form__input:valid {
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
