--- a/pages/index.css
+++ b/pages/index.css
@@ -45,3 +45,4 @@
 @import url(../blocks/image-button/image-button.css);
 @import url(../blocks/close-button/_type/_image/close-button_type_image.css);
 @import url(../blocks/submit-button/_disabled/submit-button_disabled.css);
+@import url(../blocks/form/__input/_type/form__input_type_error.css);
