--- a/blocks/form/__info/form__info.css
+++ b/blocks/form/__info/form__info.css
@@ -1,7 +1,8 @@
 .form__info {
   padding: 0;
-  margin: 0;
+  margin: 49px auto 0;
   max-width: 358px;
+  min-height: 125px;
   border: none;
 }
 @media screen and (max-width: 650px) {
