--- a/blocks/form/__input/_type/form__input_type_card-link.css
+++ b/blocks/form/__input/_type/form__input_type_card-link.css
@@ -4,7 +4,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
-  margin-top: 30px;
   border-bottom: 1px solid rgba(196, 196, 196, 1);
   color: #000000;
+  margin: 13px auto 0;
 }
