--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -45,6 +45,7 @@
 @import url(../blocks/form/__input/_error/form__input_error_active.css);
 @import url(../blocks/form/__handler/form__handler.css);
 @import url(../blocks/delete-button/delete-button.css);
+@import url(../blocks/delete-button/_inactive/delete-button_inactive.css);
 @import url(../blocks/image-button/image-button.css);
 @import url(../blocks/close-button/_type/_image/close-button_type_image.css);
 @import url(../blocks/submit-button/_disabled/submit-button_disabled.css);
