--- a/src/blocks/delete-button/delete-button.css
+++ b/src/blocks/delete-button/delete-button.css
@@ -1,4 +1,5 @@
 .delete-button {
+  display: block;
   background-image: url(../../images/deleteButton.svg);
   background-repeat: no-repeat;
   background-color: transparent;
