--- a/src/blocks/avatar/__image/avatar__image.css
+++ b/src/blocks/avatar/__image/avatar__image.css
@@ -1,11 +1,11 @@
-.profile__avatar {
+.avatar__image {
   width: 120px;
   height: 120px;
   object-fit: cover;
   border-radius: 50%;
 }
 @media screen and (max-width: 650px) {
-  .profile__avatar {
+  .avatar__image {
     grid-column: 1/2;
     grid-row: 1;
     justify-self: center;
